indent paragraphs a little

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -67,7 +67,7 @@ body {
     font-style: italic;
   }
   p {
-    margin: 0; padding: 0;
+    margin: 0; padding: 0; margin-left: 20px;
   }
   p + p {
     margin-top: 10px;
