--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ body {
 /* line 61, ../scss/style.scss */
 #results {
   display: none;
-  padding: 10px 20px 50px 20px;
+  padding: 10px 0 50px 10px;
   min-height: 100vh;
   font-size: 3rem;
 }
