--- a/scss/style.scss
+++ b/scss/style.scss
@@ -60,7 +60,7 @@ body {
 
 #results {
   display: none;
-  padding: 10px 20px 50px 20px;
+  padding: 10px 0 50px 10px;
   min-height: 100vh;
   font-size: 3rem;
   h1 {
