add random coloring and consistent sizes

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,45 +1,16 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro|Source+Code+Pro);
 
-@mixin rainbow {
-  &:nth-child(1) {
-      background-color: hsla(0, 50%, 50%, 1);
-      color: hsla(0, 50%, 30%, 1);
-    }
-  &:nth-child(2) {
-    background-color: hsla(72, 50%, 50%, 1);
-    color: hsla(72, 50%, 30%, 1);
-  }
-  &:nth-child(3) {
-    background-color: hsla(144, 50%, 50%, 1);
-    color: hsla(144, 50%, 30%, 1);
-  }
-  &:nth-child(4) {
-    background-color: hsla(216, 50%, 50%, 1);
-    color: hsla(216, 50%, 30%, 1);
-  }
-  &:nth-child(5) {
-    background-color: hsla(288, 50%, 50%, 1);
-    color: hsla(288, 50%, 30%, 1);
-  }
-}
-
 body {
   background-color: hsla(190, 10%, 50%, 1);
   color: hsla(190, 10%, 30%, 1);
   font-family: 'Source Sans Pro', sans-serif;
 }
 
-#start {
-  display: none;
-}
-
 .item {
-  @include rainbow;
   text-align: center;
   font-size: 2rem;
-  line-height: 5vh;
-  height: 5vh;
-  padding: 25vh 0;
+  line-height: 100%;
+  padding: 12.6vh 0;
   @media (min-width: 600px) {
     font-size: 4rem;
   };
@@ -55,22 +26,23 @@ body {
 
 #drink {
   display: none;
-  .item { padding: 16.7vh 0; }
 }
 
 #results {
   display: none;
-  padding: 10px 0 50px 10px;
-  min-height: 100vh;
-  font-size: 3rem;
+  position: relative;
+  padding: 20px 0 10px 10px;
+  min-height: 87.99vh;
+  font-size: 2rem;
   h1 {
+    display: none;
     font-style: italic;
   }
   p {
-    margin: 0; padding: 0; margin-left: 20px;
+    margin: 0; padding: 0;
   }
   p + p {
-    margin-top: 10px;
+    margin-top: 5px;
   }
   span {
     font-family: 'Source Code Pro', monospace;
