--- a/css/style.css
+++ b/css/style.css
@@ -1,97 +1,63 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro|Source+Code+Pro);
-/* line 26, ../scss/style.scss */
+/* line 3, ../scss/style.scss */
 body {
   background-color: #73888c;
   color: #455254;
   font-family: 'Source Sans Pro', sans-serif;
 }
 
-/* line 32, ../scss/style.scss */
-#start {
-  display: none;
-}
-
-/* line 36, ../scss/style.scss */
+/* line 9, ../scss/style.scss */
 .item {
   text-align: center;
   font-size: 2rem;
-  line-height: 5vh;
-  height: 5vh;
-  padding: 25vh 0;
-}
-/* line 4, ../scss/style.scss */
-.item:nth-child(1) {
-  background-color: #bf4040;
-  color: #732626;
-}
-/* line 8, ../scss/style.scss */
-.item:nth-child(2) {
-  background-color: #a6bf40;
-  color: #637326;
-}
-/* line 12, ../scss/style.scss */
-.item:nth-child(3) {
-  background-color: #40bf73;
-  color: #267345;
-}
-/* line 16, ../scss/style.scss */
-.item:nth-child(4) {
-  background-color: #4073bf;
-  color: #264573;
-}
-/* line 20, ../scss/style.scss */
-.item:nth-child(5) {
-  background-color: #a640bf;
-  color: #632673;
+  line-height: 100%;
+  padding: 12.6vh 0;
 }
 @media (min-width: 600px) {
-  /* line 36, ../scss/style.scss */
+  /* line 9, ../scss/style.scss */
   .item {
     font-size: 4rem;
   }
 }
 
-/* line 48, ../scss/style.scss */
+/* line 19, ../scss/style.scss */
 #meal {
   display: block;
 }
 
-/* line 52, ../scss/style.scss */
+/* line 23, ../scss/style.scss */
 #side {
   display: none;
 }
 
-/* line 56, ../scss/style.scss */
+/* line 27, ../scss/style.scss */
 #drink {
   display: none;
 }
-/* line 58, ../scss/style.scss */
-#drink .item {
-  padding: 16.7vh 0;
-}
 
-/* line 61, ../scss/style.scss */
+/* line 31, ../scss/style.scss */
 #results {
   display: none;
-  padding: 10px 0 50px 10px;
-  min-height: 100vh;
-  font-size: 3rem;
+  position: relative;
+  padding: 20px 0 10px 10px;
+  min-height: 87.99vh;
+  font-size: 2rem;
 }
-/* line 66, ../scss/style.scss */
+/* line 37, ../scss/style.scss */
 #results h1 {
+  display: none;
   font-style: italic;
 }
-/* line 69, ../scss/style.scss */
+/* line 41, ../scss/style.scss */
 #results p {
   margin: 0;
   padding: 0;
-  margin-left: 20px;
 }
-/* line 72, ../scss/style.scss */
+/* line 44, ../scss/style.scss */
 #results p + p {
-  margin-top: 10px;
+  margin-top: 5px;
 }
-/* line 75, ../scss/style.scss */
+/* line 47, ../scss/style.scss */
 #results span {
   font-family: 'Source Code Pro', monospace;
 }
