--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,13 +8,14 @@ body {
 
 .container-fluid {
   position: relative;
+  min-height: 100vh;
 }
 
 .item {
   text-align: center;
+  height: 33.33vh;
+  line-height: 33.33vh;
   font-size: 2rem;
-  line-height: 100%;
-  padding: 12.6vh 0;
   @media (min-width: 600px) {
     font-size: 4rem;
   };
@@ -32,32 +33,40 @@ body {
   display: none;
 }
 
+$results-padding: 20px;
+
 #results {
   display: none;
   position: relative;
-  padding: 20px 0 10px 10px;
-  min-height: 87.99vh;
-  font-size: 2rem;
-  h1 {
-    display: none;
-    font-style: italic;
+  padding: $results-padding;
+  min-height: 100vh;
+  font-size: 2rem;  
+
+  ul {
+
+    list-style-type: none;
+    padding: 0;
+
+    li {
+
+      span {
+        font-family: 'Source Code Pro', monospace;
+      }
+
+    }
+
+    li + li {
+      margin-top: 5px;
+    }
   }
-  p {
-    margin: 0; padding: 0;
-  }
-  p + p {
-    margin-top: 5px;
-  }
-  span {
-    font-family: 'Source Code Pro', monospace;
-  }
-  #x {
+
+  #ok {
     font-size: 2.5rem;
     padding: 10px 15px;
     display: inline-block;
     position: absolute;
-    right: 20px;
-    top: 20px;
+    right: $results-padding;
+    top: $results-padding;
     z-index: 10;
   }
 }
