--- a/css/style.css
+++ b/css/style.css
@@ -1,74 +1,49 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro|Source+Code+Pro);
-/* line 3, ../scss/style.scss */
 body {
   background-color: #73888c;
   color: #455254;
-  font-family: 'Source Sans Pro', sans-serif;
-}
+  font-family: 'Source Sans Pro', sans-serif; }
 
-/* line 9, ../scss/style.scss */
 .container-fluid {
   position: relative;
-  min-height: 100vh;
-}
+  min-height: 100vh; }
 
-/* line 14, ../scss/style.scss */
 .item {
   text-align: center;
   height: 33.33vh;
   line-height: 33.33vh;
-  font-size: 2rem;
-}
-@media (min-width: 600px) {
-  /* line 14, ../scss/style.scss */
-  .item {
-    font-size: 4rem;
-  }
-}
+  font-size: 2rem; }
+  @media (min-width: 600px) {
+    .item {
+      font-size: 4rem; } }
 
-/* line 24, ../scss/style.scss */
 #meal {
-  display: block;
-}
+  display: block; }
 
-/* line 28, ../scss/style.scss */
 #side {
-  display: none;
-}
+  display: none; }
 
-/* line 32, ../scss/style.scss */
 #drink {
-  display: none;
-}
+  display: none; }
 
-/* line 38, ../scss/style.scss */
 #results {
   display: none;
   position: relative;
   padding: 20px;
   min-height: 100vh;
-  font-size: 2rem;
-}
-/* line 45, ../scss/style.scss */
-#results ul {
-  list-style-type: none;
-  padding: 0;
-}
-/* line 52, ../scss/style.scss */
-#results ul li span {
-  font-family: 'Source Code Pro', monospace;
-}
-/* line 58, ../scss/style.scss */
-#results ul li + li {
-  margin-top: 5px;
-}
-/* line 63, ../scss/style.scss */
-#results #ok {
-  font-size: 2.5rem;
-  padding: 10px 15px;
-  display: inline-block;
-  position: absolute;
-  right: 20px;
-  top: 20px;
-  z-index: 10;
-}
+  font-size: 2rem; }
+  #results ul {
+    list-style-type: none;
+    padding: 0; }
+    #results ul li span {
+      font-family: 'Source Code Pro', monospace; }
+    #results ul li + li {
+      margin-top: 5px; }
+  #results #ok {
+    font-size: 2.5rem;
+    padding: 10px 15px;
+    display: inline-block;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    z-index: 10; }
